--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
     "react-tweet": "^3.2.2",
     "reading-time": "^1.5.0",
