feat: update scripts for content generation acc blog and gists as well as update codeblock using fumadocs ui and related shiki transformers

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "content-collections build && next build",
     "start": "next start",
     "lint": "ultracite lint",
-    "gists:fetch": "tsx scripts/github.ts"
+    "gists:fetch": "tsx scripts/gists.ts",
+    "blogs:fetch": "tsx scripts/blogs.ts"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -16,7 +17,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
-    "fumadocs-core": "^15.2.6",
+    "fumadocs-core": "^15.6.0",
+    "fumadocs-ui": "^15.6.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.19.2",
     "next": "15.3.4",
