--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "reading-time": "^1.5.0",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.5",
-    "svg-toolbelt": "^0.7.0",
+    "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
