--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.5",
     "svg-pan-zoom": "^3.6.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.5",
