--- a/package.json
+++ b/package.json
@@ -7,23 +7,30 @@
     "build": "content-collections build && next build",
     "start": "next start",
     "lint": "ultracite lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
     "gists:fetch": "tsx scripts/gists.ts",
     "gist:single": "tsx scripts/single-gist.ts",
     "blogs:fetch": "tsx scripts/blogs.ts"
   },
   "dependencies": {
+    "@next/env": "^15.3.5",
+    "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "deepmerge": "^4.3.1",
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.8.2",
     "fumadocs-core": "^15.6.0",
     "fumadocs-ui": "^15.6.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
     "motion": "^12.19.2",
-    "next": "15.3.4",
+    "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -50,6 +57,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.0",
+    "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
