--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "blogs:fetch": "tsx scripts/blogs.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@next/env": "^15.3.5",
     "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
