--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/third-parties": "^15.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tanstack/react-query": "^5.83.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
