--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
+    "db:push": "drizzle-kit push",
     "gists:fetch": "tsx scripts/gists.ts",
     "gist:single": "tsx scripts/single-gist.ts",
     "blogs:fetch": "tsx scripts/blogs.ts"
