--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sonner": "^2.0.5",
     "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
