--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@next/env": "^15.3.5",
     "@next/third-parties": "^15.3.5",
+    "@number-flow/react": "^0.5.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
