--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@next/env": "^15.3.5",
     "@next/third-parties": "^15.3.5",
     "@number-flow/react": "^0.5.10",
+    "@orpc/client": "^1.7.4",
+    "@orpc/json-schema": "^1.7.4",
+    "@orpc/openapi": "^1.7.4",
+    "@orpc/server": "^1.7.4",
+    "@orpc/tanstack-query": "^1.7.4",
+    "@orpc/zod": "^1.7.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
@@ -35,7 +41,7 @@
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
     "motion": "^12.19.2",
-    "next": "15.3.5",
+    "next": "^15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
