--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-player": "^2.16.0",
     "react-tweet": "^3.2.2",
     "reading-time": "^1.5.0",
+    "recharts": "^2.15.4",
     "schema-dts": "^1.1.5",
     "sonner": "^2.0.5",
     "svg-pan-zoom": "^3.6.2",
