--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@orpc/server": "^1.7.4",
     "@orpc/tanstack-query": "^1.7.4",
     "@orpc/zod": "^1.7.4",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
