--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^3.3.1",
     "use-lanyard": "^1.7.0",
     "usehooks-ts": "^3.1.1",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
