--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@orpc/tanstack-query": "^1.7.4",
     "@orpc/zod": "^1.7.4",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/redis": "^1.35.1",
