--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.9",
     "react-markdown": "^10.1.0",
     "react-medium-image-zoom": "^5.2.14",
     "react-player": "^2.16.0",
