--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "app/globals.css",
+    "css": "app/(my-app)/globals.css",
     "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
