--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "content-collections": ["./.content-collections/generated"]
+      "@payload-config": ["./payload.config.ts"],
+      "content-collections": ["./.content-collections/generated"],
     },
     "strictNullChecks": true
   },
