--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"content-collections watch\" \"next dev --turbopack\"",
-    "build": "content-collections build && next build",
-    "start": "next start",
-    "lint": "ultracite lint",
+    "dev": "concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
+    "build": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build --turbopack",
+    "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
+    "devsafe": "rm -rf .next && concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
+    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
+    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "generate:types": "payload generate:types",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -26,6 +30,9 @@
     "@orpc/server": "^1.7.4",
     "@orpc/tanstack-query": "^1.7.4",
     "@orpc/zod": "^1.7.4",
+    "@payloadcms/db-postgres": "^3.51.0",
+    "@payloadcms/next": "^3.51.0",
+    "@payloadcms/richtext-lexical": "^3.51.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
@@ -41,11 +48,13 @@
     "drizzle-zod": "^0.8.2",
     "fumadocs-core": "^15.6.0",
     "fumadocs-ui": "^15.6.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
     "motion": "^12.19.2",
     "next": "^15.3.5",
     "next-themes": "^0.4.6",
+    "payload": "^3.51.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-github-calendar": "^4.5.9",
@@ -56,6 +65,7 @@
     "reading-time": "^1.5.0",
     "recharts": "^2.15.4",
     "schema-dts": "^1.1.5",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.5",
     "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^3.3.1",
@@ -76,6 +86,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.0",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.4",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
