--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@payloadcms/db-postgres": "^3.51.0",
     "@payloadcms/next": "^3.51.0",
     "@payloadcms/richtext-lexical": "^3.51.0",
+    "@payloadcms/storage-uploadthing": "^3.51.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
