--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
+    "dev:payload": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack",
     "build": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build",
     "build:preview": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build --turbopack",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
@@ -45,6 +46,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "deepmerge": "^4.3.1",
     "drizzle-orm": "^0.44.2",
     "drizzle-zod": "^0.8.2",
