--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "drizzle-zod": "^0.8.2",
     "fumadocs-core": "^15.6.0",
     "fumadocs-ui": "^15.6.0",
+    "fuse.js": "^7.1.0",
     "graphql": "^16.11.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
