--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "@payloadcms/next": "^3.51.0",
     "@payloadcms/richtext-lexical": "^3.51.0",
     "@payloadcms/storage-uploadthing": "^3.51.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.83.0",
     "@upstash/redis": "^1.35.1",
