--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@orpc/server": "^1.7.4",
     "@orpc/tanstack-query": "^1.7.4",
     "@orpc/zod": "^1.7.4",
+    "@paper-design/shaders-react": "^0.0.46",
     "@payloadcms/db-postgres": "^3.51.0",
     "@payloadcms/next": "^3.51.0",
     "@payloadcms/richtext-lexical": "^3.51.0",
