feat: clarity project live insights endpoint with db caching

--- a/package.json
+++ b/package.json
@@ -53,12 +53,13 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "deepmerge": "^4.3.1",
-    "drizzle-orm": "^0.44.2",
+    "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
     "fumadocs-core": "^15.6.0",
     "fumadocs-ui": "^15.6.0",
     "fuse.js": "^7.1.0",
     "graphql": "^16.11.0",
+    "http-status-codes": "^2.3.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
     "motion": "^12.19.2",
