--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@payloadcms/next": "^3.51.0",
     "@payloadcms/richtext-lexical": "^3.51.0",
     "@payloadcms/storage-uploadthing": "^3.51.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
