--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "fuse.js": "^7.1.0",
     "graphql": "^16.11.0",
     "http-status-codes": "^2.3.0",
+    "input-otp": "^1.4.2",
     "leva": "^0.10.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
