--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "http-status-codes": "^2.3.0",
     "input-otp": "^1.4.2",
     "leva": "^0.10.0",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.525.0",
     "mermaid": "^11.8.0",
     "motion": "^12.19.2",
