--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
