--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
-    "dev:payload": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack",
     "build": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build",
     "build:preview": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build --turbopack",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "devsafe": "rm -rf .next && concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
+    "dev-safe": "rm -rf .next && concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
-    "generate:types": "payload generate:types",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -34,10 +31,6 @@
     "@orpc/tanstack-query": "^1.7.4",
     "@orpc/zod": "^1.7.4",
     "@paper-design/shaders-react": "^0.0.46",
-    "@payloadcms/db-postgres": "^3.51.0",
-    "@payloadcms/next": "^3.51.0",
-    "@payloadcms/richtext-lexical": "^3.51.0",
-    "@payloadcms/storage-uploadthing": "^3.51.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
