--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "@microsoft/clarity": "^1.0.0",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/env": "^15.5.6",
-    "@next/third-parties": "^15.5.6",
+    "@next/env": "16.0.5",
+    "@next/third-parties": "16.0.5",
     "@number-flow/react": "^0.5.10",
     "@orpc/client": "^1.11.3",
     "@orpc/json-schema": "^1.11.3",
@@ -63,10 +63,10 @@
     "lucide-react": "^0.525.0",
     "mermaid": "^11.12.1",
     "motion": "^12.23.24",
-    "next": "^15.5.6",
+    "next": "16.0.5",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-github-calendar": "^4.5.11",
     "react-medium-image-zoom": "^5.4.0",
     "react-player": "^2.16.1",
@@ -92,8 +92,9 @@
     "@octokit/rest": "^22.0.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "baseline-browser-mapping": "^2.8.32",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.7",
@@ -103,5 +104,11 @@
     "typescript": "^5.9.3",
     "ultracite": "5.0.26",
     "zod": "^4.1.12"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
