--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
+    "dev": "concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev\"",
     "build": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build",
-    "build:preview": "content-collections build && cross-env NODE_OPTIONS=--no-deprecation next build --turbopack",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
-    "dev-safe": "rm -rf .next && concurrently \"content-collections watch\" \"cross-env NODE_OPTIONS=--no-deprecation next dev --turbopack\"",
-    "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -19,10 +16,10 @@
     "blogs:fetch": "tsx lib/scripts/blogs.ts"
   },
   "dependencies": {
-    "@microsoft/clarity": "^1.0.0",
+    "@microsoft/clarity": "^1.0.2",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/env": "^15.5.6",
-    "@next/third-parties": "^15.5.6",
+    "@next/env": "16.0.5",
+    "@next/third-parties": "16.0.5",
     "@number-flow/react": "^0.5.10",
     "@orpc/client": "^1.11.3",
     "@orpc/json-schema": "^1.11.3",
@@ -41,9 +38,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-query": "^5.90.11",
     "@types/canvas-confetti": "^1.9.0",
-    "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -63,10 +59,10 @@
     "lucide-react": "^0.525.0",
     "mermaid": "^11.12.1",
     "motion": "^12.23.24",
-    "next": "^15.5.6",
+    "next": "16.0.5",
     "next-themes": "^0.4.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-github-calendar": "^4.5.11",
     "react-medium-image-zoom": "^5.4.0",
     "react-player": "^2.16.1",
@@ -79,7 +75,6 @@
     "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^3.4.0",
     "use-lanyard": "^1.7.0",
-    "use-sound": "^5.0.0",
     "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.8"
   },
@@ -92,8 +87,9 @@
     "@octokit/rest": "^22.0.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.19.25",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "baseline-browser-mapping": "^2.8.32",
     "concurrently": "^9.2.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.7",
@@ -102,6 +98,6 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "ultracite": "5.0.26",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   }
 }
