--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.90.11",
+    "@tanstack/react-query": "5.90.10",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.4",
@@ -99,5 +99,8 @@
     "typescript": "^5.9.3",
     "ultracite": "5.0.26",
     "zod": "^4.1.13"
+  },
+  "resolutions": {
+    "@tanstack/query-core": "5.90.10"
   }
 }
