--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "blogs:fetch": "tsx lib/scripts/blogs.ts"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^2.0.32",
+    "@ai-sdk/openai": "^2.0.76",
+    "@ai-sdk/react": "^2.0.106",
     "@microsoft/clarity": "^1.0.2",
     "@neondatabase/serverless": "^1.0.2",
     "@next/env": "16.0.5",
@@ -32,15 +35,23 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "5.90.10",
     "@types/canvas-confetti": "^1.9.0",
     "@vercel/analytics": "^1.5.0",
+    "@xyflow/react": "^12.9.3",
+    "ai": "^5.0.106",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +60,7 @@
     "deepmerge": "^4.3.1",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
+    "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^15.8.5",
     "fumadocs-ui": "^15.8.5",
     "fuse.js": "^7.1.0",
@@ -56,9 +68,10 @@
     "input-otp": "^1.4.2",
     "leva": "^0.10.1",
     "lottie-web": "^5.13.0",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.555.0",
     "mermaid": "^11.12.1",
-    "motion": "^12.23.24",
+    "motion": "^12.23.25",
+    "nanoid": "^5.1.6",
     "next": "16.0.5",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -71,10 +84,14 @@
     "recharts": "^2.15.4",
     "schema-dts": "^1.1.5",
     "sharp": "^0.34.5",
+    "shiki": "^3.18.0",
     "sonner": "^2.0.7",
+    "streamdown": "^1.6.9",
     "svg-pan-zoom": "^3.6.2",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
     "use-lanyard": "^1.7.0",
+    "use-stick-to-bottom": "^1.1.1",
     "usehooks-ts": "^3.1.1",
     "zustand": "^5.0.8"
   },
