--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@microsoft/clarity": "^1.0.2",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/env": "16.0.5",
-    "@next/third-parties": "16.0.5",
+    "@next/env": "16.1.0",
+    "@next/third-parties": "16.1.0",
     "@number-flow/react": "^0.5.10",
     "@orpc/client": "^1.11.3",
     "@orpc/json-schema": "^1.11.3",
@@ -59,10 +59,10 @@
     "lucide-react": "^0.525.0",
     "mermaid": "^11.12.1",
     "motion": "^12.23.24",
-    "next": "16.0.10",
+    "next": "16.1.0",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-github-calendar": "^4.5.11",
     "react-medium-image-zoom": "^5.4.0",
     "react-player": "^2.16.1",
@@ -101,6 +101,8 @@
     "zod": "^4.1.13"
   },
   "resolutions": {
-    "@tanstack/query-core": "5.90.10"
+    "@tanstack/query-core": "5.90.10",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
